PR/53511: Palle Lyckegaard: Fix compiling flex on a Solaris 11 host system